tests/machine/x/fs/dataset_where_filter.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(12,25): error FS0764: No assignment given for field 'is_senior' of type 'Dataset_where_filter.Anon2'

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(12,55): error FS0764: No assignment given for field 'is_senior' of type 'Dataset_where_filter.Anon2'

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(12,83): error FS0764: No assignment given for field 'is_senior' of type 'Dataset_where_filter.Anon2'

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(12,115): error FS0764: No assignment given for field 'is_senior' of type 'Dataset_where_filter.Anon2'

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(13,53): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon2    
The type 'obj' is not compatible with the type 'Anon2'

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(13,83): error FS1129: The type 'obj' does not contain a field 'name'

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(16,45): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon2    
The type 'obj' is not compatible with the type 'Anon2'

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(16,78): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon2    
The type 'obj' is not compatible with the type 'Anon2'

/workspace/mochi/tests/machine/x/fs/dataset_where_filter.fs(16,101): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon2    
The type 'obj' is not compatible with the type 'Anon2'
